# crypto

./: .gitignore  Launch_MissionControl.ps1  MissionControl.spec  README.md  build.ps1  colab_gpu_worker.ipynb  colab_ssh_worker.ipynb  docker-compose.yml  pyproject.toml  test.zig  test_ctk.py  test_loop.py  test_pandera.py
config/: data_sources.example.toml  freqtrade.dryrun.example.json
onnx_exports/: fincast.onnx  lobert.onnx
scripts/: colab_run_harness.py  fast_fetch.go  freqtrade_baselines.ps1  refactor.py  setup_env.ps1  stress_test_zig.py
src/cloud/: data_loaders.py  dataset_inventory.py  export_to_onnx.py  kaggle_trainer.py  lob_encoder.py  rl_agent.py  train_fincast.py  train_lobert.py
src/cloud/baselines/: catalog.py
src/core/: hashing.py  lob_encoder.py  logger.py  models.py  paths.py  pattern_model.py  rpc_client.py  schemas.py  sys_events.py
src/crypto_research/: __init__.py  cli.py  decision.py  duckdb_queries.py  flaml_optimizer.py  forecast.py  governor.py  ingest.py  langgraph_automation.py  news_extractor.py  runner.py  schemas.py
src/crypto_research/baselines/: __init__.py
src/crypto_research/gui/: app.py  worker.py
src/data/: binance_public.py  data_loaders.py  hft_replay.py  ingest.py  l2_collector.py  news_extractor.py  tls_proxy.py  ws_sync_server.py
src/execution/: CMakeLists.txt  build.zig  inference_core.cpp  inference_core.h  main.zig
src/execution/.zig-cache/o/4988fad5d98b83e0a7d820fcb107267b/: cimport.h  cimport.zig
src/execution/.zig-cache/o/bd9f29331a0c5568d2eb7cf7dc946e33/: cimport.zig
src/go/: go.mod  main.go
src/go_orchestrator/: go.mod  main.go
src/mission_control/: cli.py  decision.py  deep_reasoning.py  flaml_optimizer.py  forecast.py  governor.py  langgraph_automation.py  live_paper_trader.py  llm_server.py  monitoring.py  runner.py
src/mission_control/gui/: app.py  worker.py
src/native/: CMakeLists.txt  build.zig  math_engine.cpp  math_engine.zig
src/scripts/: stress_test.py
tests/: test_binance_public.py  test_deep_profile.py  test_pattern_model.py  test_performance.py  test_validation.py
user_data/: config.json
user_data/strategies/: BuyAndHoldBaseline.py  MaCrossover.py  MaCrossoverBaseline.py  MomentumBaseline.py  RandomBaseline.py  RandomEntryBaseline.py  RsiBaseline.py  RsiMeanReversionBaseline.py  SignalStrategy.py
