[project]
name = "crypto-research"
version = "0.1.0"
description = "Phase 1 crypto research data foundation for Binance public data."
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "polars>=1.0.0",
    "pyarrow>=16.0.0",
    "requests>=2.32.0",
    "typer>=0.12.0",
    "pandera>=0.32.0",
    "timesfm>=2.0.0",
    "google-genai>=0.1.1",
    "websockets>=12.0",
    "mlflow>=2.11.0",
    "evidently>=0.4.17",
    "flaml[blendsearch]>=2.1.2",
    "customtkinter>=5.2.2",
    "pyinstaller>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
crypto-data = "crypto_research.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_research"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
